Fixed spacing

--- a/edificios/edificio-a/styles.css
+++ b/edificios/edificio-a/styles.css
@@ -289,9 +289,10 @@ html {
     font-size: 1.7vh;
 }
 
-.info-classroom-last {
+classroom-end-spacing {
     margin-bottom: 3.5vh;
 }
+
 
 
 /* Horarios */
